.metadata/.plugins/org.eclipse.cdt.ui/project7.build.log
12:01:00 **** Incremental Build of configuration Debug for project project7 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:43: error: stray '\302' in program
  104 |        HAL_GPIO_WritePin(GPIOA,GPIO_PIN_5, 0);
      |                                           ^
../Core/Src/main.c:105:5: error: stray '\302' in program
  105 |       }
      |     ^
../Core/Src/main.c:105:7: error: stray '\302' in program
  105 |       }
      |      ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

12:01:00 Build Failed. 4 errors, 0 warnings. (took 216ms)

